--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,32 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+   <style>
+    img{
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .divZip {
+      align-items: center;
+    }
+  
+  </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <img src="LogoExample.png"
+    class="center"
+      width="10%"
+      alt="App Logo">
+      <div class="divZip"><form action="index2.html">
+        <label for ="zip">Zip Code:</label>
+        <input type="text" id="zip" name="zip"><br> <br>
+      </form>
+    </div>
+   
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
